crates/toml/tests/snapshots/invalid/control/rawmulti-us.stderr
TOML parse error at line 1, column 24
  |
1 | rawmulti-us   = '''null'''
  |                        ^
invalid multi-line literal string, expected non-single-quote characters
